syntax="proto3";

import "krpcext.proto";
option java_multiple_files=true;
option java_generic_services=true;

option java_package="com.xxx.userservice.proto";
option java_outer_classname="UserServiceMetas";

message LoginReq {
	string userName = 1;
	string password = 2;
}

message LoginRes {
	int32 retCode = 1;
	string retMsg = 2;
	string userId = 3;
}

message UpdateProfileReq {
	string userId = 1;
	string mobile = 2;
}

message UpdateProfileRes {
	int32 retCode = 1;
	string retMsg = 2;
}

service UserService {
	option (krpc.serviceId) = 100;
	rpc login(LoginReq) returns (LoginRes)  { option (krpc.msgId) = 1; };
	rpc updateProfile(UpdateProfileReq) returns (UpdateProfileRes)   { option (krpc.msgId) = 2; };
}


message OrderItemAttr {
	string name = 1;
	string value = 2;
}

message OrderItem {
	string itemId = 1;
	string name = 2;
	int32 price = 3;
	repeated OrderItemAttr attrs = 4;
}

message Order {
	string orderId = 1;
	repeated OrderItem items = 2;
}

